[package]
name = "intder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "irreps"
path = "src/bin/irreps.rs"

[dependencies]
approx = "0.5.1"
nalgebra = "0.31.1"
psqs = { path = "/home/brent/Projects/psqs" }
regex = "1.5.5"
symm = { path = "/home/brent/Projects/symm" }
tensor = { path = "/home/brent/Projects/tensor" }
